GNOME Bugzilla – Bug 673961
Mismatching AC_DEFINE for XI 2.2 support
Last modified: 2012-04-12 10:38:32 UTC
Created attachment 211893 [details] [review] 0001-Rename-XINPUT_2_2-define-to-HAVE_XINPUT_2_2.patch configure.ac defines XINPUT_2_2 if XI 2.2 support was found. The code expects XINPUT_2_2 in the device manager, but HAVE_XINPUT_2_2 in the x11 backend. On newer X servers, the latter causes a BadValue when XIQueryDevice sends a different major/minor than gdk's device manager (gnome-control-center). Attached patch changes all occurrences to HAVE_XINPUT_2_2, for consistency with HAVE_XINPUT_2
Review of attachment 211893 [details] [review]: ouch. looks good, thanks for the patch.
pushed to master and the clutter-1.10 branch.